Better path visuals